# dim_dca

./: Makefile  README.md  pyproject.toml
data/: example_synthetic.csv
docs/: math_notes.md
notebooks/: README.md
src/dim_dca/: __init__.py  cli.py  compare.py  data.py  diagnostics.py  exploratory.py  fit.py  models.py  objectives.py  simulate.py  types.py  uncertainty.py  validation.py
tests/: test_cli_pipeline.py  test_exploratory.py  test_fit_and_compare.py  test_models.py  test_property_based.py  test_regression_edge_cases.py  test_uncertainty.py
